Fixed the squished vis issue just a bit

--- a/css/pie-style.css
+++ b/css/pie-style.css
@@ -8,5 +8,6 @@
 }
 
 #pie-vis-container{
-  top: 300px;
+  margin-top: 3em;
+  top: 5em;
 }
